# hadamard-secret-sharing

./: Cargo.toml  Readme.md
src/: hadamard_matrix.rs  lib.rs  scheme_impl.rs  scheme_traits.rs
