[package]
name = "hadamard_sss"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
rand = "0.8.5"
anyhow = "1.0"
zeroize = { version = "1.2.0", features = ["zeroize_derive"], optional = true }
